# msix-packaging

./: .gitignore  CMakeLists.txt  makewin.cmd
cmake/: crypto.cmake  crypto_sources.cmake
pipelines/: azure-pipelines-aosp.yml  azure-pipelines-ios.yml  azure-pipelines-linux.yml  azure-pipelines-macos.yml  azure-pipelines-windows.yml
sample/: CMakeLists.txt
sample/BundleSample/: CMakeLists.txt
sample/ExtractContentsSample/: CMakeLists.txt
sample/OverrideLanguageSample/: CMakeLists.txt
sample/OverrideStreamSample/: CMakeLists.txt
src/: CMakeLists.txt
src/inc/: AppxPackaging.hpp  FileStream.hpp  SignatureCreator.hpp
src/makemsix/: main.cpp
src/msix/: CMakeLists.txt  UnicodeConversion.cpp  msix.cpp
src/msix/PAL/Signature/OpenSSL/: SharedOpenSSL.cpp  SharedOpenSSL.hpp  SignatureCreator.cpp  SignatureValidator.cpp
src/msix/PAL/XML/Apple/: NSXmlParserDelegateWrapper.mm  XmlDocumentReader.cpp  XmlDocumentReader.hpp
src/prototype/: BlockMapWriter.cpp  CMakeLists.txt  ContentTypeWriter.cpp  README  ZipObject.cpp  main.cpp
src/prototype/PAL/Encoding/OpenSSL/: Encoding.cpp
src/prototype/PAL/Encoding/Win32/: Encoding.cpp
src/prototype/PAL/FileSystem/POSIX/: DirectoryRead.cpp
src/prototype/PAL/FileSystem/Windows/: DirectoryRead.cpp
src/prototype/PAL/SHA256/OpenSSL/: SHA256.cpp
src/prototype/PAL/SHA256/Win32/: SHA256.cpp
src/prototype/PAL/XML/Xerces/: XmlWriter.cpp
src/prototype/inc/: BlockMapWriter.hpp  ContentTypeWriter.hpp  DeflateObject.hpp  DirectoryRead.hpp  Encoding.hpp  Helpers.hpp  ObjectBase.hpp  SHA256.hpp  XmlWriter.hpp  ZipObject.hpp
src/test/: CMakeLists.txt
src/test/api/: CMakeLists.txt
src/test/mobile/: testaosponmac.sh  testios.sh
src/test/mobile/AndroidBVT/app/src/main/cpp/: native-lib.cpp
src/test/mobile/AndroidBVT/app/src/main/java/com/microsoft/androidbvt/: MainActivity.java
src/test/mobile/iOSBVT/iOSBVT/: AppDelegate.m
src/test/msixtest/: CMakeLists.txt  UnbundleTestData.cpp  api_package.cpp  main.cpp  msixtest.cpp  unbundle.cpp  unpack.cpp
src/test/msixtest/PAL/File/POSIX/: FileHelper.cpp  FileHelpers.cpp
src/test/msixtest/PAL/File/WIN32/: FileHelper.cpp
src/test/msixtest/inc/: FileHelpers.hpp  UnbundleTestData.hpp  UnpackTestData.hpp  msixtest.hpp  msixtest_int.hpp  unpack_testdata.hpp
